[gd_scene format=3 uid="uid://chpe5fim08ihd"]

[ext_resource type="Script" uid="uid://dhwa13mkgrrw5" path="res://item_scene.gd" id="1_a127h"]
[ext_resource type="Texture2D" uid="uid://4luijhybcfr0" path="res://icon.svg" id="2_p1nqj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a127h"]
size = Vector2(77, 77)

[node name="ItemScene" type="Node2D" unique_id=1485117081 groups=["item"]]
z_index = 1
script = ExtResource("1_a127h")

[node name="BaseColor" type="ColorRect" parent="." unique_id=631274058]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 90)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 1, 1)

[node name="Button" type="Button" parent="BaseColor" unique_id=2134318984]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ButtonStopper" type="PanelContainer" parent="BaseColor" unique_id=966444943]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Extras" type="Node2D" parent="." unique_id=929427142]
visible = false

[node name="Extra1" type="Sprite2D" parent="Extras" unique_id=1035395557]
self_modulate = Color(0.6091666, 1, 0.32999998, 1)
rotation = 0.116937056
texture = ExtResource("2_p1nqj")

[node name="Extra2" type="Sprite2D" parent="Extras" unique_id=569937883]
self_modulate = Color(1, 0.17000002, 0.17000002, 1)
rotation = 0.74700093
texture = ExtResource("2_p1nqj")

[node name="Extra3" type="Sprite2D" parent="Extras" unique_id=1008421227]

[node name="Extra4" type="Sprite2D" parent="Extras" unique_id=326664719]

[node name="Extra5" type="Sprite2D" parent="Extras" unique_id=1259782660]

[node name="Area2D" type="Area2D" parent="." unique_id=1013802270]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=254869240]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_a127h")

[connection signal="button_down" from="BaseColor/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="BaseColor/Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="BaseColor/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="BaseColor/Button" to="." method="_on_button_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
